Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -583,6 +583,33 @@
     ]
   },
   {
+    "title": "Ông Trump: Greenland sẽ thuộc về tương lai của nước Mỹ",
+    "content": "Tổng thống Mỹ Donald Trump nhấn mạnh rằng Greenland sẽ thuộc về tương lai của nước Mỹ, với lý do an ninh quốc tế. Ông bảo vệ chuyến thăm của phái đoàn Mỹ đến Greenland, cho rằng đây là sự thân thiện chứ không phải khiêu khích. Trong khi đó, chính quyền Greenland đã chỉ trích kế hoạch này và cho rằng việc phái đoàn Mỹ thăm đảo có thể mang tính chất thị uy.",
+    "link": "https://dantri.com.vn/the-gioi/ong-trump-greenland-se-thuoc-ve-tuong-lai-cua-nuoc-my-20250325085927447.htm",
+    "cat": "the-gioi",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Ông Trump có ý định gì với Greenland?",
+    "answers": [
+      {
+        "text": "Sáp nhập Greenland vào Mỹ",
+        "correct": true
+      },
+      {
+        "text": "Mua lại hòn đảo khác",
+        "correct": false
+      },
+      {
+        "text": "Đưa thêm quân đội đến Greenland",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường hợp tác thương mại với Greenland",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Mỹ phát triển SUV bọc thép mới bảo vệ Tổng thống",
     "content": "Giám đốc Cơ quan Mật vụ Mỹ vừa có cuộc gặp với lãnh đạo General Motors để thảo luận về việc phát triển SUV bọc thép mới nhằm bảo vệ Tổng thống. Cuộc họp diễn ra trong bối cảnh GM đang chế tạo phiên bản mới của chiếc limousine dành cho Tổng thống có biệt danh \"The Beast\". Hợp đồng trị giá 14,8 triệu USD đã được ký kết với GM để tiến hành dự án này, nhưng thời gian ra mắt xe mới vẫn chưa được xác định.",
     "link": "https://vnexpress.net/my-phat-trien-suv-boc-thep-moi-bao-ve-tong-thong-4865414.html",
@@ -1225,33 +1252,6 @@
     ]
   },
   {
-    "title": "4 cơ chế gây ung thư của rượu bia",
-    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
-    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
-    "answers": [
-      {
-        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
-        "correct": true
-      },
-      {
-        "text": "Chỉ làm tăng nguy cơ béo phì",
-        "correct": false
-      },
-      {
-        "text": "Không gây ảnh hưởng gì đến sức khỏe",
-        "correct": false
-      },
-      {
-        "text": "Chỉ gây nghiện và không gây ung thư",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
     "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
     "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
@@ -1359,6 +1359,33 @@
       },
       {
         "text": "Từ tháng 5 đến tháng 10 năm 2023",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 cơ chế gây ung thư của rượu bia",
+    "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
+    "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Rượu bia gây ung thư qua những cơ chế nào?",
+    "answers": [
+      {
+        "text": "Gây tổn thương DNA, viêm nhiễm, rối loạn hormone, hấp thụ chất gây ung thư khác",
+        "correct": true
+      },
+      {
+        "text": "Chỉ làm tăng nguy cơ béo phì",
+        "correct": false
+      },
+      {
+        "text": "Không gây ảnh hưởng gì đến sức khỏe",
+        "correct": false
+      },
+      {
+        "text": "Chỉ gây nghiện và không gây ung thư",
         "correct": false
       }
     ]
@@ -2272,33 +2299,6 @@
     ]
   },
   {
-    "title": "Thai phụ uống cacao được không?",
-    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
-    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Thai phụ có nên uống cacao không?",
-    "answers": [
-      {
-        "text": "Có, nếu uống với liều lượng vừa phải.",
-        "correct": true
-      },
-      {
-        "text": "Không, cacao không tốt cho thai phụ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên uống cacao vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Cacao có thể gây hại cho thai nhi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
     "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
     "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
@@ -2321,6 +2321,33 @@
       },
       {
         "text": "Tăng cường quảng cáo sản phẩm mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thai phụ uống cacao được không?",
+    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
+    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thai phụ có nên uống cacao không?",
+    "answers": [
+      {
+        "text": "Có, nếu uống với liều lượng vừa phải.",
+        "correct": true
+      },
+      {
+        "text": "Không, cacao không tốt cho thai phụ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên uống cacao vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Cacao có thể gây hại cho thai nhi.",
         "correct": false
       }
     ]
@@ -2531,33 +2558,6 @@
     ]
   },
   {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
-    "answers": [
-      {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
-        "correct": true
-      },
-      {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
-        "correct": false
-      },
-      {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
-        "correct": false
-      },
-      {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sức bật từ hệ sinh thái số liên ngành",
     "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
     "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
@@ -2665,6 +2665,33 @@
       },
       {
         "text": "Vì anh không hợp với vai diễn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
         "correct": false
       }
     ]
@@ -4888,33 +4915,6 @@
     ]
   },
   {
-    "title": "Từng mắc quai bị có vô sinh không?",
-    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
-    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Mắc quai bị có thể gây vô sinh không?",
-    "answers": [
-      {
-        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
-        "correct": true
-      },
-      {
-        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng chỉ ở trẻ gái.",
-        "correct": false
-      },
-      {
-        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống nước kiềm có phòng ngừa ung thư?",
     "content": "Nước kiềm, với độ pH cao hơn nước thường, được nhiều người cho rằng có khả năng phòng ngừa ung thư bằng cách trung hòa axit trong cơ thể. Tuy nhiên, chưa có bằng chứng khoa học nào chứng minh rằng uống nước kiềm có thể ngăn ngừa ung thư. Thực tế, môi trường axit không phải là nguyên nhân gây ra ung thư, mà tế bào ung thư mới là yếu tố làm tăng độ axit. Bác sĩ khuyến cáo rằng nước kiềm chỉ nên được sử dụng để bổ sung nước cho cơ thể và không thay thế các phương pháp điều trị ung thư đã được chứng minh.",
     "link": "https://vnexpress.net/uong-nuoc-kiem-co-phong-ngua-ung-thu-4865064.html",
@@ -4968,6 +4968,33 @@
       },
       {
         "text": "Chỉ đi bộ trên bề mặt bằng phẳng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Từng mắc quai bị có vô sinh không?",
+    "content": "Bệnh quai bị có thể gây ra một số biến chứng nghiêm trọng, bao gồm viêm tinh hoàn ở nam giới, đặc biệt là sau tuổi dậy thì, dẫn đến nguy cơ vô sinh. Nếu viêm tinh hoàn xảy ra ở cả hai bên, khả năng sản xuất tinh trùng sẽ suy giảm nghiêm trọng, gây ra tình trạng vô tinh. Trẻ gái cũng có thể bị viêm buồng trứng, nhưng ít khi dẫn đến vô sinh. Để phòng ngừa, việc tiêm vaccine quai bị là rất quan trọng.",
+    "link": "https://vnexpress.net/tung-mac-quai-bi-co-vo-sinh-khong-4865030.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Mắc quai bị có thể gây vô sinh không?",
+    "answers": [
+      {
+        "text": "Có, nếu viêm tinh hoàn xảy ra ở cả hai bên.",
+        "correct": true
+      },
+      {
+        "text": "Không, quai bị không ảnh hưởng đến khả năng sinh sản.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng chỉ ở trẻ gái.",
+        "correct": false
+      },
+      {
+        "text": "Không, trẻ sẽ luôn có khả năng sinh sản.",
         "correct": false
       }
     ]
@@ -5224,33 +5251,6 @@
     ]
   },
   {
-    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
-    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
-    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
-    "answers": [
-      {
-        "text": "Giữa tháng 3",
-        "correct": true
-      },
-      {
-        "text": "Đầu tháng 4",
-        "correct": false
-      },
-      {
-        "text": "Cuối tháng 2",
-        "correct": false
-      },
-      {
-        "text": "Giữa tháng 1",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 hiểu lầm thường gặp về đường",
     "content": "Bài viết đề cập đến 4 hiểu lầm phổ biến về đường, bao gồm những tác hại của đường không chỉ trong bánh kẹo, nước ngọt mà còn trong nhiều sản phẩm chế biến khác. Đường tinh luyện có thể gây tăng cân, béo phì, rối loạn chuyển hóa và tăng nguy cơ bệnh tim mạch. Tuy nhiên, không phải tất cả loại đường đều xấu; đường tự nhiên trong trái cây và rau củ mang lại nhiều lợi ích cho sức khỏe. Người tiêu dùng nên thận trọng với lượng đường bổ sung và kết hợp ăn uống hợp lý.",
     "link": "https://vnexpress.net/4-hieu-lam-thuong-gap-ve-duong-4865016.html",
@@ -5273,6 +5273,33 @@
       },
       {
         "text": "Chỉ ăn đường một lần trong ngày là an toàn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Skoda Kushaq - CUV cỡ B mới nhận cọc tại đại lý",
+    "content": "Skoda Kushaq, mẫu CUV cỡ B mới của Skoda, đã bắt đầu nhận cọc từ giữa tháng 3 với giá dự kiến khoảng 600 triệu đồng. Đây là mẫu xe thứ ba của Skoda tại Việt Nam, sau Kodiaq và Karoq, được lắp ráp bởi tập đoàn Thành Công. Xe có kích thước tương đồng với Mitsubishi Xforce và sẽ cạnh tranh với các đối thủ như Kia Seltos và Hyundai Creta. Dự kiến, Kushaq sẽ được chính thức giới thiệu vào tháng 6 năm 2025 và có thể giao xe vào quý II.",
+    "link": "https://vnexpress.net/skoda-kushaq-cuv-co-b-moi-nhan-coc-tai-dai-ly-4864777.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Skoda Kushaq bắt đầu nhận cọc từ thời điểm nào?",
+    "answers": [
+      {
+        "text": "Giữa tháng 3",
+        "correct": true
+      },
+      {
+        "text": "Đầu tháng 4",
+        "correct": false
+      },
+      {
+        "text": "Cuối tháng 2",
+        "correct": false
+      },
+      {
+        "text": "Giữa tháng 1",
         "correct": false
       }
     ]
@@ -5304,33 +5331,6 @@
       },
       {
         "text": "Kiev",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tòa án hủy luận tội Thủ tướng Hàn Quốc",
-    "content": "Tòa án Hiến pháp Hàn Quốc đã bác đơn luận tội đối với Thủ tướng Han Duck-soo, cho phép ông trở lại vị trí quyền Tổng thống. Quyết định này được đưa ra với 7 phiếu thuận và 1 phiếu chống, cho thấy không đủ chứng cứ để buộc tội ông vi phạm hiến pháp hoặc luật pháp liên quan đến lệnh thiết quân luật. Trước đó, ông Han đã bị đình chỉ chức vụ do mâu thuẫn với quốc hội và bị cáo buộc có vai trò trong việc ban hành thiết quân luật.",
-    "link": "https://dantri.com.vn/the-gioi/toa-an-huy-luan-toi-thu-tuong-han-quoc-20250324090124986.htm",
-    "cat": "thoi-su",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tòa án Hàn Quốc đã đưa ra phán quyết như thế nào đối với Thủ tướng Han Duck-soo?",
-    "answers": [
-      {
-        "text": "Tòa án đã bác đơn luận tội ông Han Duck-soo.",
-        "correct": true
-      },
-      {
-        "text": "Tòa án đã buộc tội ông Han Duck-soo.",
-        "correct": false
-      },
-      {
-        "text": "Tòa án đã yêu cầu ông Han Duck-soo từ chức.",
-        "correct": false
-      },
-      {
-        "text": "Tòa án đã đình chỉ chức vụ của ông Han Duck-soo.",
         "correct": false
       }
     ]
