Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "CEO Samsung Han Jong Hee đột ngột qua đời",
+    "content": "Vào ngày 25 tháng 3, CEO Han Jong Hee của Samsung Electronics đã qua đời do ngừng tim, hưởng thọ 63 tuổi. Ông Han đã tham gia vào tập đoàn này gần 40 năm và đã có những đóng góp lớn trong lĩnh vực điện tử gia dụng và thiết bị di động. Tang lễ của ông sẽ được tổ chức tại Trung tâm y tế Samsung ở Seoul vào ngày 27 tháng 3.",
+    "link": "https://tuoitre.vn/ceo-samsung-han-jong-hee-dot-ngot-qua-doi-do-ngung-tim-20250325093338409.htm",
+    "cat": "kinh-doanh",
+    "positivity": 1,
+    "importance": 10,
+    "question": "CEO Samsung Han Jong Hee đã qua đời vào ngày nào?",
+    "answers": [
+      {
+        "text": "25 tháng 3",
+        "correct": true
+      },
+      {
+        "text": "22 tháng 3",
+        "correct": false
+      },
+      {
+        "text": "27 tháng 3",
+        "correct": false
+      },
+      {
+        "text": "15 tháng 3",
+        "correct": false
+      },
+      {
+        "text": "10 tháng 3",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vali điện, xe điện một bánh không được dạo phố, vì sao?",
     "content": "Bài viết đề cập đến việc vali điện và xe điện một bánh không được phép lưu thông trên đường phố tại TP.HCM. Theo quy định của pháp luật, các phương tiện này không được xem là xe thô sơ và do đó không đủ điều kiện tham gia giao thông. Người sử dụng các phương tiện này có thể bị phạt tiền nếu điều khiển trên đường phố, do tiềm ẩn nguy hiểm cho bản thân và những người tham gia giao thông khác.",
     "link": "https://tuoitre.vn/vali-dien-xe-dien-mot-banh-khong-duoc-dao-pho-vi-sao-2025032416184161.htm",
@@ -1180,37 +1211,6 @@
     ]
   },
   {
-    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
-    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
-    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
-    "answers": [
-      {
-        "text": "4.700 USD",
-        "correct": true
-      },
-      {
-        "text": "3.500 USD",
-        "correct": false
-      },
-      {
-        "text": "5.000 USD",
-        "correct": false
-      },
-      {
-        "text": "6.000 USD",
-        "correct": false
-      },
-      {
-        "text": "4.000 USD",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe gầm cao cỡ B Trung Quốc khuấy động thị trường Việt",
     "content": "Xe gầm cao cỡ B từ Trung Quốc như Geely Coolray, Omoda C5 và MG ZS đang tạo ra sự cạnh tranh mạnh mẽ trên thị trường Việt Nam. Giá bán của những mẫu xe này khá tương đồng, với mức khởi điểm từ hơn 530 triệu đồng, thu hút sự quan tâm từ người tiêu dùng. Dù vẫn đối mặt với tâm lý ưa chuộng thương hiệu Nhật, Hàn, xe Trung Quốc đang dần thu hút khách hàng trẻ và những người có ngân sách hạn chế. Các thương hiệu này cũng có kế hoạch dài hạn để phát triển sản xuất trong nước nhằm tăng sức cạnh tranh.",
     "link": "https://vnexpress.net/xe-gam-cao-co-b-trung-quoc-khuay-dong-thi-truong-viet-4865116.html",
@@ -1237,6 +1237,37 @@
       },
       {
         "text": "Honda HR-V",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
+    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
+    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "4.700 USD",
+        "correct": true
+      },
+      {
+        "text": "3.500 USD",
+        "correct": false
+      },
+      {
+        "text": "5.000 USD",
+        "correct": false
+      },
+      {
+        "text": "6.000 USD",
+        "correct": false
+      },
+      {
+        "text": "4.000 USD",
         "correct": false
       }
     ]
@@ -1721,28 +1752,32 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
+    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
+    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
+    "positivity": 4,
+    "importance": 9,
+    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
     "answers": [
       {
-        "text": "Vàng và hơi dính",
+        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
         "correct": true
       },
       {
-        "text": "Trắng và khô",
+        "text": "Không có ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Đen và có mùi",
+        "text": "Giúp trẻ em phát triển nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Đỏ và lỏng",
+        "text": "Làm tăng cường sức khỏe cho trẻ.",
+        "correct": false
+      },
+      {
+        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
         "correct": false
       }
     ]
@@ -1775,32 +1810,28 @@
     ]
   },
   {
-    "title": "Thiếu vi chất - thách thức lớn nhất với trẻ em Việt",
-    "content": "Trẻ em Việt Nam đang phải đối mặt với thách thức lớn nhất về dinh dưỡng là thiếu vi chất dinh dưỡng, theo báo cáo từ bà Supasita Kraisri, Giám đốc tiếp thị FrieslandCampina Việt Nam. Khảo sát SEANUTS II cho thấy tỷ lệ trẻ thiếu vi chất dinh dưỡng, đặc biệt là sắt và kẽm, đang ở mức cao, với nhiều trẻ không đáp ứng được nhu cầu dinh dưỡng hàng ngày. Thiếu vi chất có thể dẫn đến những ảnh hưởng nghiêm trọng đến sự phát triển thể chất và trí tuệ của trẻ, do vậy việc chăm sóc dinh dưỡng cho trẻ em là rất cần thiết.",
-    "link": "https://vnexpress.net/thieu-vi-chat-thach-thuc-lon-nhat-voi-tre-em-viet-4865346.html",
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 9,
-    "question": "Thiếu vi chất dinh dưỡng có ảnh hưởng gì đến trẻ em Việt Nam?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
     "answers": [
       {
-        "text": "Có thể dẫn đến sự phát triển thể chất và trí tuệ kém.",
+        "text": "Vàng và hơi dính",
         "correct": true
       },
       {
-        "text": "Không có ảnh hưởng gì.",
+        "text": "Trắng và khô",
         "correct": false
       },
       {
-        "text": "Giúp trẻ em phát triển nhanh chóng.",
+        "text": "Đen và có mùi",
         "correct": false
       },
       {
-        "text": "Làm tăng cường sức khỏe cho trẻ.",
-        "correct": false
-      },
-      {
-        "text": "Giảm nguy cơ mắc bệnh cho trẻ.",
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -2208,33 +2239,6 @@
     ]
   },
   {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
-    "answers": [
-      {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
-        "correct": true
-      },
-      {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sức bật từ hệ sinh thái số liên ngành",
     "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
     "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
@@ -2369,6 +2373,33 @@
       },
       {
         "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
+    "answers": [
+      {
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
+        "correct": true
+      },
+      {
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
+        "correct": false
+      },
+      {
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -3228,33 +3259,6 @@
     ]
   },
   {
-    "title": "Mụn lưng có thể chữa khỏi không?",
-    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
-    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Mụn lưng có thể chữa khỏi được không?",
-    "answers": [
-      {
-        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
-        "correct": true
-      },
-      {
-        "text": "Không, mụn lưng không bao giờ khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
-        "correct": false
-      },
-      {
-        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cách duy trì khoảng cách phù hợp trên đường cao tốc",
     "content": "Bài viết trình bày về tầm quan trọng của việc duy trì khoảng cách an toàn khi lái xe trên đường cao tốc để tránh tai nạn giao thông. Tài xế cần tuân thủ quy định về khoảng cách an toàn theo tốc độ di chuyển, với khoảng cách tối thiểu từ 55 m đến 100 m tùy thuộc vào tốc độ. Ngoài ra, bài viết cũng đề cập đến việc điều chỉnh khoảng cách theo điều kiện thời tiết và sử dụng nguyên tắc 3 giây để xác định khoảng cách an toàn.",
     "link": "https://vnexpress.net/cach-duy-tri-khoang-cach-phu-hop-tren-duong-cao-toc-4864160.html",
@@ -3277,6 +3281,33 @@
       },
       {
         "text": "Để giảm tiếng ồn trong xe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mụn lưng có thể chữa khỏi không?",
+    "content": "Mụn lưng là tình trạng phổ biến, thường gặp ở thanh thiếu niên và người trẻ, chủ yếu do lỗ chân lông bị tắc nghẽn bởi nhờn, bụi bẩn và vi khuẩn. Để cải thiện tình trạng này, cần giữ vệ sinh da sạch sẽ, sử dụng các sản phẩm điều trị như kem chứa benzoyl peroxide hoặc axit salicylic. Ngoài ra, tránh mặc quần áo chật và kiểm soát căng thẳng cũng có thể giúp giảm mụn. Nếu tình trạng nặng, nên tới bác sĩ da liễu để được điều trị kịp thời.",
+    "link": "https://vnexpress.net/mun-lung-co-the-chua-khoi-khong-4865135.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Mụn lưng có thể chữa khỏi được không?",
+    "answers": [
+      {
+        "text": "Có, mụn lưng có thể chữa khỏi nếu điều trị đúng cách.",
+        "correct": true
+      },
+      {
+        "text": "Không, mụn lưng không bao giờ khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ có thể giảm nhưng không thể chữa khỏi.",
+        "correct": false
+      },
+      {
+        "text": "Mụn lưng chỉ tự khỏi khi không hoạt động thể chất.",
         "correct": false
       }
     ]
